# arkworks-crust

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
arkworks-cpp/: CMakeLists.txt  arkworks.cpp
cmake/: arkworks_crustConfig.cmake  functions.cmake  rust.cmake
src/: lib.rs
src-cpp/: CMakeLists.txt
